--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^2.0.0",
-    "fastify-plugin": "^1.5.0",
     "fastify-autoload": "^1.0.0",
-    "fastify-cli": "^1.1.0"
+    "fastify-cli": "^1.1.0",
+    "fastify-plugin": "^1.5.0",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.13.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
