--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ DATABASE_PASSWORD=saikat95
 DATABASE_NAME=bht
 DATABASE_HOST=127.0.0.1
 DATABASE_DIALECT=mysql
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASS=
 SESSION_TTL_SECS=1200
