--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "fastify": "^2.0.0",
     "fastify-autoload": "^1.0.0",
     "fastify-cli": "^1.1.0",
     "fastify-plugin": "^1.5.0",
+    "fastify-redis": "^3.1.1",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.13.1"
+    "sequelize": "^5.13.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
