--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "fastify-cli": "^1.1.0",
     "fastify-plugin": "^1.5.0",
     "fastify-redis": "^3.1.1",
+    "http-errors": "^1.7.3",
+    "http-status": "^1.3.2",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.13.1",
