--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "fastify-cli": "^1.1.0",
     "fastify-plugin": "^1.5.0",
     "fastify-redis": "^3.1.1",
+    "fastify-swagger": "^2.4.0",
     "http-errors": "^1.7.3",
     "http-status": "^1.3.2",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.13.1",
